fix image overflow

--- a/styles/pricing.scss
+++ b/styles/pricing.scss
@@ -1,6 +1,7 @@
 .pricing {
   background: $bg-dark-primary;
   margin: 4rem 0;
+  position: relative;
   .pricing_background_elements {
     position: absolute;
     width: 100%;
